RESOLVED FIXED140849
[Win] Cursor copy constructor does not initialize scale factor
https://bugs.webkit.org/show_bug.cgi?id=140849
Summary [Win] Cursor copy constructor does not initialize scale factor
Brent Fulgham
Reported 2015-01-23 16:53:40 PST
The following layout test is failing on [insert platform] fast/events/mouse-cursor-image-set.html Probable cause: Based on the failure, it looks like the scale factor is not getting properly initialized or reported to JS: --- /home/buildbot/slave/windows-release-tests/build/OpenSource/layout-test-results/fast/events/mouse-cursor-image-set-expected.txt +++ /home/buildbot/slave/windows-release-tests/build/OpenSource/layout-test-results/fast/events/mouse-cursor-image-set-actual.txt @@ -9,72 +9,72 @@ Checking cursors with device pixel ratio of 1 ---------------------------------------------- TEST CASE: 25x25 image at 1x -Cursor Info: type=Custom hotSpot=0,0 image=25x25 +Cursor Info: type=Custom hotSpot=0,0 image=25x25 scale=8.7643683e-34 TEST CASE: 25x25 image at 2x -Cursor Info: type=Custom hotSpot=0,0 image=25x25 scale=2 +Cursor Info: type=Custom hotSpot=0,0 image=25x25 scale=2.2420775e-44 TEST CASE: 25x25 image at 1x, 30x30 image at 2x -Cursor Info: type=Custom hotSpot=0,0 image=25x25 +Cursor Info: type=Custom hotSpot=0,0 image=25x25 scale=2.2420775e-44 [... etc. ...]
Attachments
Patch (2.01 KB, patch)
2015-01-23 21:21 PST, Brent Fulgham
koivisto: review+
Brent Fulgham
Comment 1 2015-01-23 20:40:01 PST
The following tests fail due to this bug: fast/events/mouse-cursor-change.html fast/events/mouse-cursor-image-set.html fast/events/mouse-cursor-multiframecur.html fast/events/mouse-cursor-no-mousemove.html fast/events/mouse-cursor.html
Brent Fulgham
Comment 2 2015-01-23 21:21:47 PST
Brent Fulgham
Comment 3 2015-01-23 21:26:42 PST
Brent Fulgham
Comment 4 2015-01-23 22:01:59 PST
Note: A build fix was needed for Mac: Committed r179057: <https://trac.webkit.org/changeset/179057>
Note You need to log in before you can comment on or make changes to this bug.