[Win] Cursor copy constructor does not initialize scale factor https://bugs.webkit.org/show_bug.cgi?id=140849

Reviewed by Antti Koivisto.

Found by fast/events/mouse-cursor-image-set.html

Make sure the scale factor is captured during copy construction. Also make sure
it is properly initialized in the default constructor, since it it used in the
Windows port for some default cursors.

* platform/CursorWin.h:
* platform/win/CursorWin.cpp:
(WebCore::Cursor::Cursor): Make sure copy constructor captures
the scale factor.


Canonical link: https://commits.webkit.org/158839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179056 268f45cc-cd09-0410-ab3c-d52691b4dbfc