Source/WebCore/platform/Cursor.h
@@ -133,6 +133,9 @@ namespace WebCore {
             // This is an invalid Cursor and should never actually get used.
             : m_type(static_cast<Type>(-1))
             , m_platformCursor(0)
+#if ENABLE(MOUSE_CURSOR_SCALE)
+            , m_imageScaleFactor(1)
+#endif
 #endif // !PLATFORM(IOS)
         {
         }
